Header layout bugs fixed

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -2,54 +2,99 @@
 /*----------  Mother  ----------*/
 /*----------  Header  ----------*/
 header {
-    background: #281400;
-    text-align: center;
-    color: #bbb9b9;
+  background: #281400;
+  text-align: center;
+  color: #bbb9b9;
+  position: relative;
 
-    li {
-        list-style-type: none;
-        padding: 0;
+  .dropdown-menu {
+    background-color: transparent;
+  }
 
-        a {
-            color: #bbb9b9;
-        }
+  .badge {
+    background: #a28f61;
+    padding: 1rem 2rem;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    color: white;
+  }
 
-        a:hover {
-            color: #bbb9b9;
-        }
+  .badge:hover {
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+    border: 2px outset white;
+  }
+
+  .dropdown {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    a {
+      color: #bbb9b9;
     }
 
-    h1 {
-        color: white;
-        font-family: 'Alegreya Sans', sans-serif;
-        font-size: 3.5em;
-        font-weight: bold;
-        margin-bottom: 1.8rem;
+    a:hover {
+      color: #bbb9b9;
     }
+  }
 
-    h2 {
-        color: white;
-        font-size: 2.6rem;
-        font-family: 'Alegreya Sans', sans-serif;
-        font-weight: bold;
-        margin-bottom: 2rem;
-    }
+  li {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  h1 {
+    color: white;
+    font-family: 'Alegreya Sans', sans-serif;
+    font-size: 3.5em;
+    font-weight: bold;
+    margin-bottom: 1.8rem;
+    text-transform: uppercase;
+  }
+
+  h2 {
+    color: white;
+    font-size: 2.6rem;
+    font-family: 'Alegreya Sans', sans-serif;
+    font-weight: bold;
+    margin-bottom: 2rem;
+  }
+
+  .navbar {
+    text-align: left;
+  }
 }
-
 /*----------  Header  ----------*/
 /*----------  Main  ----------*/
 main {
-    background: grey;
-    padding: 1rem;
+  background: grey;
+  padding: 1rem;
 
-    h3 {
-        text-align: center;
-    }
+  h3 {
+    text-align: center;
+  }
 }
 /*----------  Main  ----------*/
 /*----------  Footer  ----------*/
 ul {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 /*----------  Footer  ----------*/
+/*----------  Media  ----------*/
+@media screen and (min-width:992px) {
+  .title {
+    width: 30rem;
+    margin: auto;
+    padding: 10rem 0 15rem 0;
+  }
+}
+
+@media screen and (max-width:992px) {
+  .title {
+    padding: 3rem 0 5rem 0;
+  }
+}
+/*----------  Media  ----------*/
